src/bindgen.rs

extern "C" {
    pub fn rasqal_query_get_construct_triples_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_construct_triple(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_triple;
}
extern "C" {
    pub fn rasqal_query_graph_pattern_visit(
        query: *mut rasqal_query,
        visit_fn: rasqal_graph_pattern_visit_fn,
        data: *mut libc::c_void,
    );
}
extern "C" {
    pub fn rasqal_query_graph_pattern_visit2(
        query: *mut rasqal_query,
        visit_fn: rasqal_graph_pattern_visit_fn,
        data: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_write(
        iostr: *mut raptor_iostream,
        query: *mut rasqal_query,
        format_uri: *mut raptor_uri,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_update_operations_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_update_operation(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_update_operation;
}
extern "C" {
    pub fn rasqal_query_set_store_results(
        query: *mut rasqal_query,
        store_results: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_get_query_graph_pattern(
        query: *mut rasqal_query,
    ) -> *mut rasqal_graph_pattern;
}
extern "C" {
    pub fn rasqal_query_get_graph_pattern_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_graph_pattern(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_graph_pattern;
}
extern "C" {
    pub fn rasqal_graph_pattern_add_sub_graph_pattern(
        graph_pattern: *mut rasqal_graph_pattern,
        sub_graph_pattern: *mut rasqal_graph_pattern,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_triple(
        graph_pattern: *mut rasqal_graph_pattern,
        idx: libc::c_int,
    ) -> *mut rasqal_triple;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_sub_graph_pattern_sequence(
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_sub_graph_pattern(
        graph_pattern: *mut rasqal_graph_pattern,
        idx: libc::c_int,
    ) -> *mut rasqal_graph_pattern;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_operator(
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> rasqal_graph_pattern_operator;
}
extern "C" {
    pub fn rasqal_graph_pattern_operator_as_string(
        op: rasqal_graph_pattern_operator,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_graph_pattern_print(gp: *mut rasqal_graph_pattern, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_graph_pattern_set_filter_expression(
        gp: *mut rasqal_graph_pattern,
        expr: *mut rasqal_expression,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_filter_expression(
        gp: *mut rasqal_graph_pattern,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_graph_pattern_visit(
        query: *mut rasqal_query,
        gp: *mut rasqal_graph_pattern,
        fn_: rasqal_graph_pattern_visit_fn,
        user_data: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_index(gp: *mut rasqal_graph_pattern) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_graph_pattern_variable_bound_in(
        gp: *mut rasqal_graph_pattern,
        v: *mut rasqal_variable,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_origin(
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_variable(
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_service(
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_flattened_triples(
        query: *mut rasqal_query,
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_graph_pattern_get_triples(
        query: *mut rasqal_query,
        graph_pattern: *mut rasqal_graph_pattern,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_verb_as_string(verb: rasqal_query_verb) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_query_print(query: *mut rasqal_query, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_prepare(
        query: *mut rasqal_query,
        query_string: *const libc::c_uchar,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_execute(query: *mut rasqal_query) -> *mut rasqal_query_results;
}
extern "C" {
    pub fn rasqal_query_get_user_data(query: *mut rasqal_query) -> *mut libc::c_void;
}
extern "C" {
    pub fn rasqal_query_set_user_data(query: *mut rasqal_query, user_data: *mut libc::c_void);
}
extern "C" {
    pub fn rasqal_query_get_bindings_variables_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_bindings_variable(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_query_get_bindings_rows_sequence(
        query: *mut rasqal_query,
    ) -> *mut raptor_sequence;
}
extern "C" {
    pub fn rasqal_query_get_bindings_row(
        query: *mut rasqal_query,
        idx: libc::c_int,
    ) -> *mut rasqal_row;
}
extern "C" {
    pub fn rasqal_query_get_result_type(query: *mut rasqal_query) -> rasqal_query_results_type;
}
extern "C" {
    pub fn rasqal_new_query_results2(
        world: *mut rasqal_world,
        query: *mut rasqal_query,
        type_: rasqal_query_results_type,
    ) -> *mut rasqal_query_results;
}
extern "C" {
    pub fn rasqal_new_query_results(
        world: *mut rasqal_world,
        query: *mut rasqal_query,
        type_: rasqal_query_results_type,
        vars_table: *mut rasqal_variables_table,
    ) -> *mut rasqal_query_results;
}
extern "C" {
    pub fn rasqal_new_query_results_from_string(
        world: *mut rasqal_world,
        type_: rasqal_query_results_type,
        base_uri: *mut raptor_uri,
        string: *const libc::c_char,
        string_len: usize,
    ) -> *mut rasqal_query_results;
}
extern "C" {
    pub fn rasqal_free_query_results(query_results: *mut rasqal_query_results);
}
extern "C" {
    pub fn rasqal_query_results_get_query(
        query_results: *mut rasqal_query_results,
    ) -> *mut rasqal_query;
}
extern "C" {
    pub fn rasqal_query_results_get_type(
        query_results: *mut rasqal_query_results,
    ) -> rasqal_query_results_type;
}
extern "C" {
    pub fn rasqal_query_results_type_label(type_: rasqal_query_results_type)
        -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_query_results_is_bindings(
        query_results: *mut rasqal_query_results,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_get_count(query_results: *mut rasqal_query_results) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_next(query_results: *mut rasqal_query_results) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_finished(query_results: *mut rasqal_query_results) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_get_bindings(
        query_results: *mut rasqal_query_results,
        names: *mut *mut *const libc::c_uchar,
        values: *mut *mut *mut rasqal_literal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_get_binding_value(
        query_results: *mut rasqal_query_results,
        offset: libc::c_int,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_query_results_get_binding_name(
        query_results: *mut rasqal_query_results,
        offset: libc::c_int,
    ) -> *const libc::c_uchar;
}
extern "C" {
    pub fn rasqal_query_results_get_binding_value_by_name(
        query_results: *mut rasqal_query_results,
        name: *const libc::c_uchar,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_query_results_get_bindings_count(
        query_results: *mut rasqal_query_results,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_add_row(
        query_results: *mut rasqal_query_results,
        row: *mut rasqal_row,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_get_row_by_offset(
        query_results: *mut rasqal_query_results,
        result_offset: libc::c_int,
    ) -> *mut rasqal_row;
}
extern "C" {
    pub fn rasqal_query_results_is_boolean(query_results: *mut rasqal_query_results)
        -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_get_boolean(
        query_results: *mut rasqal_query_results,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_is_graph(query_results: *mut rasqal_query_results) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_get_triple(
        query_results: *mut rasqal_query_results,
    ) -> *mut raptor_statement;
}
extern "C" {
    pub fn rasqal_query_results_next_triple(
        query_results: *mut rasqal_query_results,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_is_syntax(query_results: *mut rasqal_query_results) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_write(
        iostr: *mut raptor_iostream,
        results: *mut rasqal_query_results,
        name: *const libc::c_char,
        mime_type: *const libc::c_char,
        format_uri: *mut raptor_uri,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_read(
        iostr: *mut raptor_iostream,
        results: *mut rasqal_query_results,
        name: *const libc::c_char,
        mime_type: *const libc::c_char,
        format_uri: *mut raptor_uri,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_rewind(query_results: *mut rasqal_query_results) -> libc::c_int;
}
pub const rasqal_query_results_format_flags_RASQAL_QUERY_RESULTS_FORMAT_FLAG_READER:
    rasqal_query_results_format_flags = 1;
pub const rasqal_query_results_format_flags_RASQAL_QUERY_RESULTS_FORMAT_FLAG_WRITER:
    rasqal_query_results_format_flags = 2;
/// rasqal_query_results_format_flags:
/// @RASQAL_QUERY_RESULTS_FORMAT_FLAG_READER: format can be read.
/// @RASQAL_QUERY_RESULTS_FORMAT_FLAG_WRITER: format can be written.
///
/// Bitflags for rasqal_query_results_formats_check() to find formats with features.
pub type rasqal_query_results_format_flags = u32;
extern "C" {
    pub fn rasqal_query_results_formats_check2(
        world: *mut rasqal_world,
        name: *const libc::c_char,
        uri: *mut raptor_uri,
        mime_type: *const libc::c_char,
        flags: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_formats_check(
        world: *mut rasqal_world,
        name: *const libc::c_char,
        uri: *mut raptor_uri,
        mime_type: *const libc::c_char,
        flags: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_query_results_formatter(
        world: *mut rasqal_world,
        name: *const libc::c_char,
        mime_type: *const libc::c_char,
        format_uri: *mut raptor_uri,
    ) -> *mut rasqal_query_results_formatter;
}
extern "C" {
    pub fn rasqal_new_query_results_formatter_for_content(
        world: *mut rasqal_world,
        uri: *mut raptor_uri,
        mime_type: *const libc::c_char,
        buffer: *const libc::c_uchar,
        len: usize,
        identifier: *const libc::c_uchar,
    ) -> *mut rasqal_query_results_formatter;
}
extern "C" {
    pub fn rasqal_free_query_results_formatter(formatter: *mut rasqal_query_results_formatter);
}
